Fixed a visual bug that caused the parameters to overflow behind theborder radius of the input method.

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@
       0 16px 32px rgba(255, 255, 255, 0.005);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    border-radius: 2rem;
+    border-radius: 3rem;
     padding: 3rem;
     pointer-events: all;
     max-width: 1280px;
