--- a/src/components/Basket/basket.scss
+++ b/src/components/Basket/basket.scss
@@ -13,7 +13,7 @@
 
   //   border: 1px solid #22222222;
   padding: 1.5rem;
-  border-radius: 1rem;
+  border-radius: 1.5rem;
 
   position: relative;
   transition: all 250ms ease;
