--- a/src/components/Input/components/Parameters/parameter.scss
+++ b/src/components/Input/components/Parameters/parameter.scss
@@ -7,26 +7,27 @@
   flex-direction: column;
   align-items: center;
   // padding-top: 0.5rem;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
   box-shadow: 0 0 32px 2px rgba(0, 0, 0, 0.035);
   box-shadow: 0 2px 16px 4px rgba(0, 0, 0, 0.025),
     0 4px 8px rgba(0, 0, 0, 0.005), 0 8px 16px rgba(0, 0, 0, 0.005),
     0 16px 32px rgba(0, 0, 0, 0.005);
   user-select: none;
   cursor: pointer;
-  transition: all 200ms ease-out;
+  transition: all 200ms ease;
   max-width: calc(50% - 0.333rem);
   position: relative;
+  backdrop-filter: blur(8px);
 
-  &:before {
+  .parameter-below {
     position: absolute;
     bottom: -2rem;
     left: 0;
     height: 2rem;
-    content: "";
     width: 100%;
-    background: white;
+    background-color: rgba(255, 255, 255, 0.85);
+    transition: all 100ms linear;
   }
   @media (max-width: 768px) {
     height: 5rem;
