--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -20,8 +20,8 @@
     justify-content: center;
 
     .method {
-      box-shadow: 0 0 32px 2px rgba(0, 0, 0, 0.05);
-      box-shadow: 0 2px 16px 4px rgba(0, 0, 0, 0.025),
+      box-shadow: 0 0 32px 2px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 0px 16px 4px rgba(0, 0, 0, 0.04),
         0 4px 8px rgba(0, 0, 0, 0.005), 0 8px 16px rgba(0, 0, 0, 0.005),
         0 16px 32px rgba(0, 0, 0, 0.005);
       flex: 1;
@@ -40,6 +40,7 @@
       overflow: hidden;
       position: relative;
       border-radius: 1.5rem;
+
       // border-bottom-right-radius: 3rem;
       // border-bottom-left-radius: 3rem;
 
@@ -101,5 +102,6 @@
   .parameters {
     display: flex;
     gap: 0.75rem;
+    // overflow: hidden;
   }
 }
